Use a less-hidden but often overlooked Base64 encoder available since JDK6, instead of doing some nasty introspection tricks.